2007-04-02  Philipp Kern <phil@0x539.de>

	* inc/document_info.hpp:
	* inc/format_string.hpp:
	* inc/zeroconf.hpp:
	* src/colour.cpp: added additional #include directives to fix
	compilation with GCC 4.3, thanks to Martin Michlmayr

2007-04-02  Philipp Kern <phil@0x539.de>

	* inc/zeroconf_avahi.hpp:
	* src/zeroconf_avahi.cpp: Some improvements to the native Avahi
	implementation, thanks to Andreas Niess; yet untested:
	  + use threaded pool instead of simple pool

2007-03-21  Armin Burgmeier  <armin@0x539.de>

	* src/command.cpp: Do not truncate the last character of command
	arguments.

	* inc/server_buffer.hpp:
	* inc/host_buffer.hpp: Added a send_message overload that takes a
	recipient.

2007-03-15  Armin Burgmeier  <armin@0x539.de>

	* contrib/obbyconv/obbyconv_03_to_04: Added conversion script that
	converts obby sessions from version 0.3 to 0.4 by Thomas Herlea.

2007-02-25  Armin Burgmeier  <armin@0x539.de>

	* inc/document.hpp:
	* src/document.cpp: Added changed signal that is emitted every time
	the document is changed.

2007-02-25  Philipp Kern <phil@0x539.de>

	* README, configure.ac: Bump dependency of net6 to 1.3.3
	* NEWS, configure.ac: Bump version to 0.4.3

2006-11-08  Armin Burgmeier <armin@0x539.de>

	Fall back to IPv4 when the session could not be hosted on port IPv6
	[fixes #221]

2006-11-04  Armin Burgmeier <armin@0x539.de>

	Libtool stuff

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated Autotools and gettext infrastructure

2006-09-15  Philipp Kern <phil@0x539.de>

	Fix build issue caused by a comment

2006-08-26  Philipp Kern <phil@0x539.de>

	Include the jupiter test file in the tarball

2006-08-26  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-08-26  Philipp Kern <phil@0x539.de>

	Update to the Catalan translation, thanks to Jordi Mallach

2006-08-26  Philipp Kern <phil@0x539.de>

	Bump version to 0.4.1
